complete show user all link api an doc
